# esp_gloves_idf

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  main.cpp
main/lib/api/: api.cpp  api.hpp
main/lib/mpu/: mpu.cpp  mpu.h
main/lib/wifi/: wifi.cpp  wifi.h
